# TrajSim

./: .gitignore  Atmosphere_properties.cpp  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CROSS_PLATFORM_CHANGES.md  FlightSimGUI  GNC.cpp  GNC.hpp  GUI_SETUP_README.md  LICENSE  Makefile.gui  QUICKSTART.md  README.md  aerodynamics.hpp  coding_pratices  constants.h  engine_model.cpp  engine_model.hpp  gravity.cpp  gravity.hpp  gui_main.cpp  imgui.ini  math.cpp  math.hpp  rocket.cpp  rocket.hpp  run.sh  sim.cpp  sim_runner.cpp  sim_runner.hpp  trajectory.hpp  utilities.cpp  utilities.hpp
.claude/: settings.local.json
FlightSim.xcodeproj/: project.pbxproj
FlightSim.xcodeproj/project.xcworkspace/xcuserdata/vincentning.xcuserdatad/Bookmarks/: bookmarks.plist
FlightSim.xcodeproj/xcshareddata/xcschemes/: FlightSim.xcscheme
FlightSim.xcodeproj/xcuserdata/vincentning.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FlightSim.xcodeproj/xcuserdata/vincentning.xcuserdatad/xcschemes/: xcschememanagement.plist
config/: config_mission_1.json  config_mission_2.json
files/: IGMCoefs.csv  P_inertial.csv  V_inertial.csv  coding_pratices  euler angles.csv  highspeed.csv  lowspeed.csv  rk4_IGM_sim.csv  structural.csv  structural2.csv  structural3.csv  structural4.csv
include/config/: config_loader.hpp
include/core/: constants.hpp  mat3.hpp  sim.hpp  types.hpp  utils.hpp  vec3.hpp
include/models/: atmosphere.hpp  control.hpp  dynamics.hpp  gravity.hpp  guidance.hpp  integrator.hpp  reference_mission.hpp
include/models/guidance/: exit_criteria.hpp  guidance.hpp  iterative_guidance.hpp  open_loop_guidance.hpp
include/models/guidance/algorithm/: guidance_algorithm.hpp  iterative_guidance.hpp  open_loop_guidance.hpp
include/models/vehicle/: aerodynamics.hpp  reference_vehicle.hpp  vehicle.hpp
include/models/vehicle/engine_models/: engine.hpp  liquid_engine.hpp
output/: telemetry.csv
src/: Atmosphere_properties.hpp  GNC.cpp  GNC.hpp  aerodynamics.cpp  engine_model.cpp  gui_main.cpp  main.cpp  math.cpp  rocket.cpp  rocket.hpp  sim.cpp  sim.hpp  sim_runner.cpp  sim_runner.hpp  trajectory.hpp  types.hpp  utilities.hpp
src/config/: config_loader.cpp
src/models/: aerodynamics.cpp  atmosphere.cpp  dynamics.cpp  gravity.cpp  guidance.cpp  integrator.cpp  liquid_engine.cpp  scratch.cpp
src/models/guidance/: guidance.cpp  iterative_guidance.cpp  open_loop_guidance.cpp
src/models/guidance/algorithm/: iterative_guidance.cpp  open_loop_guidance.cpp
tests/: test_aerodynamics.cpp  test_atmosphere.cpp  test_config_loader.cpp  test_dynamics.cpp  test_gravity.cpp  test_guidance.cpp  test_integrator.cpp  test_liquid_engine.cpp  test_mat3.cpp  test_vec3.cpp  test_vehicle.cpp
ui/: visualization.html
